--- a/index.html
+++ b/index.html
@@ -12,73 +12,79 @@
   <link rel="apple-touch-icon" href="assets/logo.png" />
   <link rel="manifest" href="assets/site.webmanifest" />
 
+  <!-- Futuristic fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
       --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640;
       --ink:#e6ecff; --muted:#92a0c5;
       --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
-      --focus:#b3e1ff;
-      --maxw:1400px;
+      --focus:#b3e1ff; --maxw:1680px;
     }
 
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
     body{
       min-height:100vh; display:flex; flex-direction:column; color:var(--ink);
-      background:
-        radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
-        linear-gradient(120deg, var(--bg-1), var(--bg-2));
-      overflow-x:hidden; font-family:'Inter',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      /* show cursor again */
-      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'><path d='M3 3 L23 13 L14 16 L19 27 L15 29 L9 18 L3 21 Z' fill='%2311b1ff' opacity='0.9'/><path d='M3 3 L23 13 L14 16' stroke='%2300a3ff' stroke-width='1.5' /></svg>") 2 2, default;
+      background:radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%), linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      overflow-x:hidden; font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'><defs><filter id='g' x='-50%' y='-50%' width='200%' height='200%'><feGaussianBlur stdDeviation='0.5'/></filter></defs><path d='M3 3 L23 12 L15 15 L21 28 L16.5 29.5 L10 17 L3 20 Z' fill='%2300b7ff'/><path d='M3 3 L23 12 L15 15' stroke='%23bff0ff' stroke-width='1.1'/><circle cx='3' cy='3' r='2' fill='%2300b7ff' filter='url(%23g)' opacity='0.8'/></svg>") 0 0, default;
     }
 
-    /* ===== Splash ===== */
+    /* ===== Splash (single smooth intro) ===== */
     .splash{position:fixed; inset:0; z-index:9999; display:grid; place-items:center; background:
-      radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
-      linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%), linear-gradient(120deg, var(--bg-1), var(--bg-2));
       transition:opacity .8s ease, visibility .8s ease}
-    .splash__logo{width:220px; height:auto; border-radius:22px; box-shadow:0 0 50px rgba(17,177,255,.45), 0 0 0 2px rgba(255,255,255,.08) inset; animation:logoPulse 1.4s ease-in-out infinite}
-    @keyframes logoPulse{0%,100%{transform:scale(1); filter:drop-shadow(0 0 22px rgba(17,177,255,.38))}50%{transform:scale(1.14); filter:drop-shadow(0 0 44px rgba(17,177,255,.65))}}
-    .splash.is-fading{animation:fadeAway .9s cubic-bezier(.22,.61,.36,1) forwards}
-    @keyframes fadeAway{0%{opacity:1; transform:none}70%{opacity:.35; transform:scale(1.02)}100%{opacity:0; transform:scale(1.04)}}
+    .splash__logo{width:240px; height:auto; border-radius:22px; box-shadow:0 0 42px rgba(17,177,255,.44), 0 0 0 2px rgba(255,255,255,.08) inset; animation:logoIntro 680ms ease-out both}
+    @keyframes logoIntro{0%{opacity:0; transform:scale(.92)}60%{opacity:1; transform:scale(1.03)}100%{opacity:1; transform:scale(1)}}
+    .splash.is-fading{animation:fadeAway .75s cubic-bezier(.22,.61,.36,1) forwards}
+    @keyframes fadeAway{from{opacity:1; transform:none}to{opacity:0; transform:scale(1.02)}}
 
-    /* ===== Stage & reveal (only after splash ends) ===== */
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:36px 28px;flex:1;width:100%}
-    .reveal{opacity:0; transform:translateY(22px); filter:blur(6px)}
+    /* ===== Stage & reveal only after splash ends ===== */
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:54px 40px;flex:1;width:100%}
+    .reveal{opacity:0; transform:translateY(28px); filter:blur(10px)}
     .app-ready .reveal{animation:reveal .9s cubic-bezier(.22,.61,.36,1) forwards}
-    .delay-1{animation-delay:.10s} .delay-2{animation-delay:.22s} .delay-3{animation-delay:.34s} .delay-4{animation-delay:.46s}
+    .delay-1{animation-delay:.10s} .delay-2{animation-delay:.26s} .delay-3{animation-delay:.42s} .delay-4{animation-delay:.58s}
     @keyframes reveal{to{opacity:1; transform:none; filter:blur(0)}}
 
-    header{display:flex;align-items:center;gap:16px;padding:12px 0 26px;border-bottom:1px solid var(--line)}
-    .logo img{width:104px;height:auto;border-radius:18px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
-    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:24px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent;animation:shine 4.2s ease-in-out infinite}
-    @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    header{display:flex;align-items:center;gap:22px;padding:16px 0 34px;border-bottom:1px solid var(--line)}
+    .brand{display:flex;align-items:center;gap:18px;position:relative}
+    .logo img{width:112px;height:auto;border-radius:22px;box-shadow:0 12px 26px rgba(17,177,255,.25)}
+    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:28px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
     .logo-text p{color:var(--muted);font-size:14px}
 
-    main{display:grid;grid-template-columns:1.15fr .85fr;align-items:start;gap:56px;padding:30px 0}
-    .content{min-width:0}
-    .content.hero{position:relative; overflow:hidden}
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:56px;line-height:1.06;margin:0 0 16px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
-    p{color:#b6c3da;line-height:1.65;margin:0 0 22px;font-size:1.1rem}
-    ul{list-style:disc;margin:0 0 22px 22px}
-    li{margin:6px 0}
+    /* ELECTRIC FLICKER for brand (professional sci‑fi) */
+    .brand.flicker .logo img{animation:crtPulse .7s ease-out 1 both}
+    .brand.flicker .logo-text{animation:crtFlicker 1s steps(18,end) 1 both}
+    @keyframes crtPulse{0%{filter:brightness(.6) saturate(1) drop-shadow(0 0 0 rgba(17,177,255,0))} 40%{filter:brightness(1.3) drop-shadow(0 0 20px rgba(17,177,255,.45))} 100%{filter:brightness(1) drop-shadow(0 0 10px rgba(17,177,255,.25))}}
+    @keyframes crtFlicker{0%,8%{opacity:.2; text-shadow:0 0 10px rgba(17,177,255,.7)} 18%{opacity:1} 28%{opacity:.35} 38%{opacity:1} 48%{opacity:.4} 58%{opacity:1} 100%{opacity:1; text-shadow:0 0 14px rgba(17,177,255,.25)}}
 
-    .cta-row{display:flex;align-items:center;gap:16px;flex-wrap:wrap; margin-top:12px}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:16px 36px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.98}
-    .apply-btn span{font-size:1.1em}
+    /* Full-height hero grid */
+    main{display:grid;grid-template-columns:1.1fr .9fr;align-items:stretch;gap:64px;padding-block:36px;min-height:clamp(620px, 82vh, 960px)}
+    .content{min-width:0; display:flex;flex-direction:column;justify-content:center}
+    .content.hero{position:relative; overflow:hidden}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:62px;line-height:1.04;margin:0 0 18px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
+    p{color:#c6d7f3;line-height:1.72;margin:0 0 20px;font-size:1.12rem}
+
+    /* Futuristic bullet style (angular markers) */
+    ul{list-style:none;margin:0 0 24px 0}
+    ul li{position:relative;padding-left:28px;margin:10px 0;font-weight:600;letter-spacing:.2px}
+    ul li::before{content:"";position:absolute;left:0;top:.55em;width:16px;height:10px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
+
+    .cta-row{display:flex;align-items:center;gap:18px;flex-wrap:wrap; margin-top:14px}
+    .apply-btn{display:inline-flex;align-items:center;gap:12px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:16px 40px;border-radius:16px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.98}
+    .apply-btn span{font-size:1.15em}
     .note{font-size:13px;color:var(--muted);margin:0}
 
     /* Terms card with parallax glow */
-    .card-wrap{position:relative}
-    .card-wrap::before{content:""; position:absolute; inset:-16px; z-index:0; pointer-events:none; border-radius:22px; background:radial-gradient(600px 300px at var(--gx,60%) var(--gy,40%), rgba(17,177,255,.14), transparent 60%); transition:background-position .15s ease}
-    .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:22px;padding:26px;box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)}
-    .card h3{color:#a8dfff;font-size:1.2rem;margin-bottom:12px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:10px}
-    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:12px 0}
+    .card-wrap{position:relative; display:flex; align-items:center}
+    .card-wrap::before{content:""; position:absolute; inset:-18px; z-index:0; pointer-events:none; border-radius:26px; background:radial-gradient(700px 340px at var(--gx,60%) var(--gy,40%), rgba(17,177,255,.14), transparent 60%); transition:background-position .12s ease}
+    .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:24px;padding:28px;box-shadow:0 18px 46px rgba(0,0,0,.34),inset 0 0 1px rgba(255,255,255,.05)}
+    .card h3{color:#a8dfff;font-size:1.25rem;margin-bottom:12px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:10px}
+    .row{display:grid;grid-template-columns:auto 1fr;gap:12px 16px;align-items:center;margin:12px 0}
     .label{color:var(--muted);font-size:14px}
     .value{font-weight:800}
 
@@ -89,7 +95,7 @@
     .contact-link .text{background:linear-gradient(90deg,#e6f5ff,#7ed8ff);-webkit-background-clip:text;color:transparent}
 
     /* Footer */
-    footer{position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px; padding:20px 28px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px}
+    footer{position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px; padding:24px 40px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px}
     footer::before{content:""; position:absolute; left:0; right:0; top:0; height:1px; background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.65}
     .footer-left,.footer-right{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
     .footer-chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
@@ -100,20 +106,21 @@
     .app-ready .hero::after{animation:heroShimmer 1.6s ease-out .25s 1 forwards}
     @keyframes heroShimmer{0%{opacity:.0; transform:translateY(-30%)}40%{opacity:.25}80%{opacity:.08}100%{opacity:0; transform:translateY(35%)}}
 
-    /* ===== Cursor glow (kept, now with real cursor) ===== */
+    /* Cursor halo + particle trail */
     .cursor-glow{position:fixed; left:0; top:0; width:120px; height:120px; border-radius:50%; pointer-events:none; z-index:9998; transform:translate(-50%, -50%); opacity:.55; background:radial-gradient(60% 60% at 50% 50%, rgba(17,177,255,.25), rgba(17,177,255,.10) 60%, transparent 70%); filter:blur(10px)}
+    .trail{position:fixed; width:10px; height:10px; border-radius:50%; pointer-events:none; z-index:9997; background:radial-gradient(circle, rgba(110,231,255,.9) 0%, rgba(17,177,255,.0) 70%); opacity:0; transform:translate(-50%,-50%)}
 
     /* Responsive */
-    @media (max-width:1280px){:root{--maxw:1200px} h2{font-size:48px}}
-    @media (max-width:960px){:root{--maxw:950px} .wrap{padding:24px 18px} main{grid-template-columns:1fr; gap:28px} h2{font-size:40px} .logo img{width:86px} .cta-row{gap:12px}}
-    @media (max-width:520px){h2{font-size:32px} p{font-size:1rem} .card{padding:18px} .apply-btn{width:100%; justify-content:center}}
-    /* Disable heavy effects and keep native cursor on touch devices */
-    @media (pointer:coarse){.cursor-glow{display:none} body{cursor:auto}}
+    @media (max-width:1450px){:root{--maxw:1380px} h2{font-size:56px}}
+    @media (max-width:1100px){:root{--maxw:1000px} main{grid-template-columns:1fr} h2{font-size:46px} .logo img{width:96px}}
+    @media (max-width:520px){h2{font-size:34px} p{font-size:1.02rem} .card{padding:20px} .apply-btn{width:100%; justify-content:center}}
+    @media (pointer:coarse){.cursor-glow,.trail{display:none} body{cursor:auto}}
   </style>
 </head>
 <body>
-  <!-- Cursor Glow -->
+  <!-- Cursor FX -->
   <div class="cursor-glow" id="cursorGlow" aria-hidden="true"></div>
+  <!-- create trails dynamically in JS -->
 
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
@@ -123,10 +130,12 @@
   <!-- Main content -->
   <div class="wrap">
     <header class="reveal delay-1">
-      <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
-      <div class="logo-text">
-        <h1>F1 CASH</h1>
-        <p>Simple Business Funding</p>
+      <div class="brand" id="brand">
+        <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
+        <div class="logo-text">
+          <h1>F1 CASH</h1>
+          <p>Simple Business Funding</p>
+        </div>
       </div>
     </header>
 
@@ -193,21 +202,28 @@
   <script>
     (function(){
       var splash = document.getElementById('splash');
+      var brand = document.getElementById('brand');
       var typingList = document.getElementById('typing-list');
-      var cursor = document.getElementById('cursorGlow');
+      var cursorGlow = document.getElementById('cursorGlow');
       var termsWrap = document.getElementById('terms-wrap');
 
-      /* ===== Splash timing: reveal content ONLY after splash fade ends ===== */
-      function beginApp(){ document.body.classList.add('app-ready'); startTyping(); }
+      /* ===== Splash timing: content ONLY after splash ends ===== */
+      function startReveal(){
+        document.body.classList.add('app-ready');
+        // run brand flicker just once
+        brand.classList.add('flicker');
+        setTimeout(function(){ brand.classList.remove('flicker'); }, 1100);
+        startTyping();
+      }
       function fadeOutSplash(){
-        if(!splash){ beginApp(); return; }
+        if(!splash){ startReveal(); return; }
         splash.classList.add('is-fading');
         splash.addEventListener('animationend', function(){
-          splash.style.display = 'none';
-          beginApp();
+          splash.style.display='none';
+          startReveal();
         }, {once:true});
       }
-      setTimeout(fadeOutSplash, 950);
+      setTimeout(fadeOutSplash, 720); // complete logoIntro, then fade
 
       /* ===== Typewriter bullets (sequential) ===== */
       function startTyping(){
@@ -220,24 +236,35 @@
           var el = items[idx];
           var txt = el.getAttribute('data-full');
           el.style.opacity = 1;
-          var i = 0;
-          var step = function(){
-            if(i <= txt.length){ el.textContent = txt.slice(0,i); i++; setTimeout(step, 14); }
-            else { idx++; setTimeout(typeNext, 180); }
-          };
-          step();
+          var i = 0; var speed = 14;
+          (function step(){
+            if(i <= txt.length){ el.textContent = txt.slice(0,i); i++; setTimeout(step, speed); }
+            else { idx++; setTimeout(typeNext, 160); }
+          })();
         }
         typeNext();
       }
 
-      /* ===== Cursor glow follow (smoothed) ===== */
-      var targetX = window.innerWidth/2, targetY = window.innerHeight/2, x = targetX, y = targetY;
-      function animateGlow(){ x += (targetX - x) * 0.18; y += (targetY - y) * 0.18; cursor.style.transform = 'translate('+(x)+'px,'+(y)+'px) translate(-50%,-50%)'; requestAnimationFrame(animateGlow); }
-      animateGlow();
-      window.addEventListener('mousemove', function(e){ targetX = e.clientX; targetY = e.clientY; if(termsWrap){ var r = termsWrap.getBoundingClientRect(); var px = Math.max(0, Math.min(1, (e.clientX - r.left)/r.width))*100; var py = Math.max(0, Math.min(1, (e.clientY - r.top)/r.height))*100; termsWrap.style.setProperty('--gx', px+'%'); termsWrap.style.setProperty('--gy', py+'%'); } }, {passive:true});
+      /* ===== Cursor halo + particle trail ===== */
+      // create a few trailing particles
+      var trails = [];
+      for(var t=0;t<8;t++){ var s=document.createElement('div'); s.className='trail'; document.body.appendChild(s); trails.push({el:s,x:window.innerWidth/2,y:window.innerHeight/2,alpha:0}); }
+      var tx=window.innerWidth/2, ty=window.innerHeight/2, x=tx, y=ty; // glow target/current
+      function raf(){
+        // glow follow
+        x += (tx - x) * 0.18; y += (ty - y) * 0.18; cursorGlow.style.transform = 'translate('+x+'px,'+y+'px) translate(-50%,-50%)';
+        // particles
+        trails.forEach(function(p,i){ p.x += (x - p.x) * (0.12 + i*0.01); p.y += (y - p.y) * (0.12 + i*0.01); p.alpha = .35 - i*0.035; p.el.style.opacity = Math.max(0,p.alpha); p.el.style.left = p.x+'px'; p.el.style.top = p.y+'px'; p.el.style.width = (10 - i*0.7) + 'px'; p.el.style.height = (10 - i*0.7) + 'px'; });
+        requestAnimationFrame(raf);
+      }
+      raf();
+      window.addEventListener('mousemove', function(e){
+        tx = e.clientX; ty = e.clientY;
+        if(termsWrap){ var r = termsWrap.getBoundingClientRect(); var px = Math.max(0, Math.min(1, (e.clientX - r.left)/r.width))*100; var py = Math.max(0, Math.min(1, (e.clientY - r.top)/r.height))*100; termsWrap.style.setProperty('--gx', px+'%'); termsWrap.style.setProperty('--gy', py+'%'); }
+      }, {passive:true});
 
-      // Set year
-      var yEl = document.getElementById('year'); if(yEl){ yEl.textContent = new Date().getFullYear(); }
+      // Year
+      var yEl=document.getElementById('year'); if(yEl){ yEl.textContent=new Date().getFullYear(); }
     })();
   </script>
 </body>
