--- a/index.html
+++ b/index.html
@@ -136,3 +136,143 @@
     setTimeout(typeNext,1800);
   </script></body>
 </html>
+
+On Wed, 15 Oct 2025, 00:24 Colden Knight, <info@f1cash.net> wrote:
+<!DOCTYPE html><html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>F1 Cash — Simple Business Funding</title>
+  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses with clear monthly payments and no collateral." />
+  <meta name="color-scheme" content="dark" />
+  <link rel="icon" type="image/png" href="assets/logo.png" />
+  <link rel="apple-touch-icon" href="assets/logo.png" />
+  <link rel="manifest" href="assets/site.webmanifest" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet"> <style>
+    :root{
+      --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640;
+      --ink:#e6ecff; --muted:#92a0c5;
+      --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
+      --focus:#b3e1ff; --maxw:1680px;
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%;overflow:hidden}
+    body{
+      min-height:100vh;display:flex;flex-direction:column;justify-content:center;color:var(--ink);
+      background:radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%), linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+      cursor:none;
+    }
+
+    /* Splash */
+    .splash{position:fixed;inset:0;z-index:9999;display:grid;place-items:center;background:radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),linear-gradient(120deg, var(--bg-1), var(--bg-2));transition:opacity 1s ease, visibility 1s ease}
+    .splash__logo{width:230px;height:auto;border-radius:22px;box-shadow:0 0 42px rgba(17,177,255,.44),0 0 0 2px rgba(255,255,255,.08) inset;animation:logoIntro 1.2s ease-out forwards}
+    @keyframes logoIntro{0%{opacity:0;transform:scale(.9)}70%{opacity:1;transform:scale(1.05)}100%{opacity:1;transform:scale(1)}}
+    .splash.is-fading{animation:fadeAway 1s ease forwards}
+    @keyframes fadeAway{0%{opacity:1}100%{opacity:0;visibility:hidden}}
+
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:60px 40px;width:100%;opacity:0;transform:translateY(30px);filter:blur(8px);transition:opacity 1s ease,transform 1s ease,filter 1s ease}
+    .app-ready .wrap{opacity:1;transform:none;filter:blur(0)}
+
+    header{display:flex;align-items:center;gap:20px;padding-bottom:30px;border-bottom:1px solid var(--line)}
+    .brand{display:flex;align-items:center;gap:18px}
+    .logo img{width:110px;height:auto;border-radius:22px;box-shadow:0 12px 26px rgba(17,177,255,.25)}
+    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:28px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
+    .logo-text p{color:var(--muted);font-size:14px}
+
+    main{display:grid;grid-template-columns:1.1fr .9fr;align-items:center;gap:60px;min-height:80vh}
+    .content{display:flex;flex-direction:column;justify-content:center}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:62px;line-height:1.04;margin:0 0 18px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
+    p{color:#c6d7f3;line-height:1.72;margin:0 0 20px;font-size:1.12rem}
+    ul{list-style:none;margin:0 0 24px 0}
+    ul li{position:relative;padding-left:28px;margin:10px 0;font-weight:600;letter-spacing:.2px}
+    ul li::before{content:"";position:absolute;left:0;top:.55em;width:16px;height:10px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
+
+    .cta-row{display:flex;align-items:center;gap:18px;flex-wrap:wrap;margin-top:14px}
+    .apply-btn{display:inline-flex;align-items:center;gap:12px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:16px 40px;border-radius:16px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.98}
+    .note{font-size:13px;color:var(--muted);margin:0}
+
+    .card-wrap{position:relative;display:flex;align-items:center;justify-content:center}
+    .card-wrap::before{content:"";position:absolute;width:100%;height:100%;border-radius:24px;pointer-events:none;background:radial-gradient(circle at center,rgba(17,177,255,.18),transparent 70%);z-index:0;}
+    .card{position:relative;z-index:1;background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:24px;padding:28px;box-shadow:0 18px 46px rgba(0,0,0,.34),inset 0 0 1px rgba(255,255,255,.05)}
+    .card h3{color:#a8dfff;font-size:1.25rem;margin-bottom:12px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:10px}
+
+    /* Cursor */
+    .cursor-glow{position:fixed;left:0;top:0;width:140px;height:140px;border-radius:50%;pointer-events:none;z-index:9998;background:radial-gradient(circle,rgba(17,177,255,.4)0%,rgba(17,177,255,.15)40%,transparent 70%);filter:blur(20px);mix-blend-mode:screen;transition:transform .1s ease-out}
+
+    @media(max-width:1100px){main{grid-template-columns:1fr}h2{font-size:46px}.logo img{width:96px}}
+    @media(max-width:520px){h2{font-size:34px}.card{padding:20px}.apply-btn{width:100%;justify-content:center}}
+  </style></head>
+<body>
+  <div class="cursor-glow" id="cursorGlow" aria-hidden="true"></div>
+  <div class="splash" id="splash" aria-hidden="true">
+    <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
+  </div> <div class="wrap" id="app">
+    <header>
+      <div class="brand" id="brand">
+        <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
+        <div class="logo-text">
+          <h1>F1 CASH</h1>
+          <p>Simple Business Funding</p>
+        </div>
+      </div>
+    </header><main>
+  <div class="content">
+    <h2>Fast working capital for small businesses</h2>
+    <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+    <ul id="typing-list">
+      <li>Business owners with 12+ months in operation</li>
+      <li>Simple promissory note after verification</li>
+      <li>6 equal monthly installments</li>
+    </ul>
+    <div class="cta-row">
+      <a class="apply-btn" title="Coming soon">🚀 APPLY NOW</a>
+      <p class="note">Button disabled for now — application link coming soon.</p>
+    </div>
+  </div>
+
+  <div class="card-wrap">
+    <aside class="card" aria-label="At-a-glance terms">
+      <h3>At-a-glance terms</h3>
+      <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
+      <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
+      <div class="row"><span class="label">Support</span><span class="value"><a href="mailto:info@f1cash.net" style="color:#11b1ff;text-decoration:none;">info@f1cash.net</a></span></div>
+      <div class="row"><span class="label">Phone</span><span class="value"><a href="tel:+12294484389" style="color:#11b1ff;text-decoration:none;">+1 229-448-4389</a></span></div>
+    </aside>
+  </div>
+</main>
+
+  </div> <script>
+    const splash=document.getElementById('splash');
+    const app=document.getElementById('app');
+    const cursor=document.getElementById('cursorGlow');
+
+    function fadeOutSplash(){
+      splash.classList.add('is-fading');
+      setTimeout(()=>{splash.style.display='none';document.body.classList.add('app-ready');},1000);
+    }
+    setTimeout(fadeOutSplash,1400);
+
+    // Cursor follow
+    let x=window.innerWidth/2,y=window.innerHeight/2;
+    document.addEventListener('mousemove',e=>{x=e.clientX;y=e.clientY;cursor.style.transform=`translate(${x}px,${y}px)`;});
+
+    // Typewriter bullets
+    const list=document.getElementById('typing-list');
+    const items=list.querySelectorAll('li');
+    items.forEach(li=>{li.dataset.text=li.textContent;li.textContent='';li.style.opacity=0;});
+    let i=0;
+    function typeNext(){
+      if(i>=items.length)return;
+      const el=items[i];el.style.opacity=1;const text=el.dataset.text;let j=0;
+      const interval=setInterval(()=>{
+        el.textContent=text.slice(0,j++);
+        if(j>text.length){clearInterval(interval);i++;setTimeout(typeNext,200);}
+      },15);
+    }
+    setTimeout(typeNext,1800);
+  </script></body>
+</html>
